--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,9 @@ dependencies = [
     "asyncio>=4.0.0",
     "loguru>=0.7.3",
     "matplotlib>=3.10.6",
-    "numpy>=2.3.2",
+    "numpy>=1.24,<2.3",
     "pandas>=2.3.2",
+    "pandas-ta>=0.4.67b0",
     "plotly>=6.3.0",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.1.0",
